--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 <div class="w-full">
 <div class="@[480px]:p-0 relative">
 <div class="absolute inset-0 bg-gradient-to-b from-accent/70 to-accent/90"></div>
-<div class="parallax-bg min-h-[calc(100vh-72px)]" data-alt="A brightly lit digital billboard in New York City's Times Square at dusk, showcasing vibrant advertising." style='background-image: url("./Assets/img/hero\ 4k.jpeg");'>
+<div class="parallax-bg min-h-[calc(100vh-72px)]" data-alt="A brightly lit digital billboard in New York City's Times Square at dusk, showcasing vibrant advertising." style='background-image: url("./Assets/img/hero.webp");'>
 <div class="relative z-10 flex min-h-[calc(100vh-72px)] flex-col items-center justify-center gap-8 p-6">
 <div class="flex max-w-4xl flex-col gap-6 text-center animate-fade-in-up" style="animation-delay: 200ms; opacity:0;">
 <h1 class="@[480px]:text-7xl @[480px]:font-black @[480px]:leading-tight @[480px]:tracking-[-0.033em] text-5xl font-black leading-tight tracking-[-0.033em] text-primary-content"> Own the Streets of Bihar with Prachar </h1>
@@ -757,5 +757,6 @@
     });
 </script>
 </div>
+
 
 </body></html>
